--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family:"MOSCOW2024";
+  src:url("./fonts/MOSCOW2024.otf") format("opentype");
+  font-weight:400;font-style:normal;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,17 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+*,
+:before,
+:after{
+  box-sizing:border-box;
+}
+
+h1, h2, h3, h4, h5, h6{
+  margin:0;
+}
+
+p{
+  margin:0;
 }
